--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="shortcut icon" href="img/favicon-64x64.ico">
     <title>WhatsApp Clone</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/style.css">
